Fix upper table spacing

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -119,7 +119,7 @@
 
     table {
       border-collapse: collapse;
-      margin: 0;
+      margin: 1em 0 0 0;
       overflow: hidden;
       table-layout: fixed;
       width: 100%;
